--- a/makav-nezer.html
+++ b/makav-nezer.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-  <img src="https://raw.githubusercontent.com/y130160/nezer/refs/heads/main/%D7%9C%D7%95%D7%92%D7%95%20%D7%A0%D7%96%D7%A8.png?token=GHSAT0AAAAAADGRRZUPPDRSFS7AUZUAKP4O2DUEH4Q" alt="לוגו נזר" />
+  <img src="https://github.com/y130160/tel/blob/main/%D7%9C%D7%95%D7%92%D7%95%20%D7%A0%D7%96%D7%A8.png?raw=true" alt="לוגו נזר" />
   <h1>שליחת דפי מעקב למג"ש</h1>
 
   <label for="magidSelect">בחר מג"ש:</label>
