--- a/makav-nezer.html
+++ b/makav-nezer.html
@@ -71,7 +71,13 @@
   <label for="magidSelect">בחר מג"ש:</label>
   <select id="magidSelect"></select>
 
-  <label for="parasha">פרשת שבוע:</label>
+  <label for="parasha">
+  פרשת שבוע:
+  <span style="font-size: 13px; font-weight: normal; color: #666;">
+    (במידה ולא נכתב פרשה יכתב פרשת השבוע הנוכחי)
+  </span>
+ </label>
+
   <input type="text" id="parasha" placeholder="לדוגמה: ויצא" />
 
   <label for="emailSelect">בחר כתובת מייל לשליחה:</label>
