--- a/makav-tel.html
+++ b/makav-tel.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>שליחת מייל לר"מ</title>
+  <link rel="icon" href="https://github.com/y130160/tel/blob/main/%D7%9C%D7%95%D7%92%D7%95.png?raw=true" type="png">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
